<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<string name="app_name">Rockbox</string>
<string name="notification">Rockbox</string>
<string name="OK">OK</string>
<string name="Cancel">Cancel</string>
<string name="KbdInputTitle">Rockbox Keyboard Input</string>
<string name="YesNoTitle">Rockbox</string>
<string name="Yes">Yes</string>
<string name="No">No</string>
<string name="error_extraction">Error occured during extraction!</string>
<string name="rockbox_extracting">Rockbox is loading. Please wait...</string>

<!-- Rockbox initial configuration values -->
<string name="rockbox_language_file">english.lng</string>

<!-- Widget -->
<string name="appwidget_label_4x1">Rockbox (line)</string>
<string name="appwidget_label_2x2">Rockbox (square)</string>
<string name="appwidget_label_3x3">Rockbox (big square)</string>
<string name="appwidget_infoDisplay">Touch to launch app</string>

<!-- Widget configuration -->
<string name="appwidget_configure_instructions">Please chose elements to display in widget.</string>
<string name="appwidget_configure_albumart">Cover Art</string>
<string name="appwidget_configure_prev">Prev Button</string>
<string name="appwidget_configure_stop">Stop Button</string>
<string name="appwidget_configure_playpause">Play/Pause Button</string>
<string name="appwidget_configure_next">Next Button</string>
<string name="appwidget_configure_confirm">Create Widget</string>

</resources>
